main app now works on iOS, without scrolling issues; Updated error message placement for desktop version; moved components into flex boxes

--- a/bicycleparking/static/src/style/mobilesheet.css
+++ b/bicycleparking/static/src/style/mobilesheet.css
@@ -54,34 +54,6 @@ h1 {
     font-size: calc(9vw + 3vh);
 }
 
-/*BETA_LABELS___________________________________________________________*/
-
-.betaMain {
-    font-weight: bold;
-    margin: 15vh auto 0vh auto;
-    width: 70vw;
-    background-image: url(assets/icons/beaker.png);
-    background-repeat: no-repeat;
-    background-position: calc(100% - 2.5vw) center;
-    background-size: 4vh;
-    text-align: left;
-    background-color: #f3b82b;
-    color: #000;
-    padding-bottom: 0vh;
-    padding-left: 4vw;
-    font-size: calc(2vw + 3vh);
-}
-
-.betaBeaker {
-    width: calc(4vh + 12vw);
-    height: 8vh;
-    font-size: 4vh;
-    background-color: #f3b82b;
-    padding: 2vh 0vh 0vh 0vh;
-    margin: -10vh 0vh 0vh auto;
-    text-align: center;
-}
-
 /*FONT_STYLING___________________________________________________________*/
 
 h2 {
@@ -111,24 +83,29 @@ body {
     background-position: center;
     overflow-x: hidden;
     overflow-y: hidden;
-    min-height: 89vh;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
     margin: auto;
 }
 
 /*___________________________________________________________*/
 
 header{
-    position: fixed;
+    order: 1;
+    position: relative;
     width: 100%;
-    margin-top: -11vh;
+    height: 10%;
     background-color: #fff;
     z-index: 1000;
+    margin-bottom: 2%;
+    display: flex;
 }
 
 .title {
     background: url(assets/icons/bikespace_header.svg) no-repeat center center;
     background-size: calc(30vh);
-    height: 10vh;
+    height: 100%;
     margin: auto;
     width: 30vh;
 }
@@ -137,10 +114,9 @@ header{
 
 #error {
     position: fixed;
-    z-index: 100;
-    margin-top: -11vh;
+    z-index: 10000;
     width: 100%;
-    height: 9.7vh;
+    height: 10%;
     padding-bottom: 0.5vh;
 }
 
@@ -240,10 +216,12 @@ header{
 }
 
 .screen1 {
-    margin-left: 1vh;
-    height: 88vh;
-    margin-top: 11vh;
-    margin-right: 1vh;
+    order: 2;
+    margin-left: 2%;
+    display: flex;
+    height: 77%;
+    flex-direction: column;
+    margin-right: 2%;
 }
 .clear {
     opacity: 0;
@@ -281,10 +259,10 @@ header{
 }
 
 .cameraButton{
-    position: absolute;
     opacity: 0;
-    width: 100%;
-    height: 100%;
+    margin-top: -30%;
+    width: 93%;
+    height: 25%;
 }
 
 .check {    
@@ -329,11 +307,6 @@ header{
 
 /*___________________________________________________________*/
 
-footer {
-    position: absolute;
-    margin-top: -4vh;
-    width: 100%;
-}
 
 /* David Cox: I don't know what this does.
 
@@ -347,13 +320,18 @@ footer {
 }*/
 
 .nav {
+    order: 3;
+    height: 10%;
+    max-height: 10%;
+    background-color: #fffffff5;
+    margin-left: 2%;
+    margin-right: 2%;
 }
 .back {
     padding: 2vw;
     box-shadow: 0px 0px 0px 0.6vw #25c252 inset;
     height: 6vw;
     width: 20vw;
-    margin-top: -8vw;
     border-radius: 10vw;
     margin-left: 3vh;
     text-align: center;
@@ -410,6 +388,10 @@ footer {
     margin-left: -2vw;
     color: #fff
 }
+.removePhoto {
+    margin-top: -15%;
+    z-index: 100000000;
+}
 
 /*SUMMARY___________________________________________________________*/
 
@@ -433,11 +415,13 @@ footer {
 
 .hiddenPicture{
     opacity: 0 !important;
+    margin-top: 0%;
     height: 0 !important;
 }
 .imagepreview {
     padding-left: 2vw;
     padding-right: 2vw;
+    margin-top: -17%;
     height: 55vh;
     overflow-y: hidden;
     overflow-x: hidden;
@@ -459,8 +443,8 @@ footer {
 
 /*MAP___________________________________________________________*/
 
-#mapid {
-    height: calc(100vh - 58%);
+#map {
+    height: 58%;
     margin-left: 2vw;
     margin-right: 2vw;
     background-color: #ddd;
